--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,162 @@
 
+/*
+#93C223
+#545356
+#545356
+*/
+
+
+/*
+===========================================
+    User Nav
+===========================================
+*/
+.nav-user {
+  background-color: #93C223;
+  padding-right: 20%;
+  color: white;
+}
+
+.nav-user a {
+  font-size: 80%;
+  color: inherit;
+  padding: 3px 10px;
+}
+
+.nav-user .nav-item:hover {
+  background-color: white;
+  color: #93C223;
+}
+
+/*
+===========================================
+  Title / Search bar
+===========================================
+*/
+
+
+.title-title {
+margin-top: 16px;
+}
+
+.title-search {
+  margin-top: 10px;
+}
+
+.title-icon {
+  padding: 4px 0 0 0;
+  text-align: end;
+  color: #93C223;
+}
+
+.title-text h4 {
+  margin-bottom: 0;
+  font-weight: 400;
+}
+
+.title-text p {
+  margin-top: 0;
+  padding-top: 0;
+  font-size: 70%
+}
+
+/*========================================*/
+
+.checkout {
+  font-size: 90%;
+  color: black;
+}
+
+
+/*
+===========================================
+  Nav Categories
+===========================================
+*/
+.nav-categories {
+  background-color: #545356;
+  color: white;
+}
+
+.nav-categories .nav-item {
+  border-bottom: 4px solid #545356;
+}
+
+.nav-categories .nav-item:hover {
+  border-bottom: 4px solid #93C223;
+  /* color: aqua !important; */
+}
+
+.nav-categories a {
+color: inherit;
+  font-weight: bold;
+  font-size: 90%;
+}
+
+
+/*
+===========================================
+  Main banner
+===========================================
+*/
+.banner img {
+  width: 100%;
+  height: 100%;
+}
+
+.banner .col-sm-12 {
+  padding: 0;
+}
+
+.banner-info {
+  position: absolute;
+  background-color: rgba(0, 0, 0, .3);
+  /*background-color: black;*/
+  color: white;
+  bottom: 0px;
+  text-align: center;
+  padding: 5px 20px;
+}
+
+.banner-info hr{
+  border-color: white;
+  margin: 3px 0;
+}
+
+.banner-info h4{
+font-size: 140%;
+  margin-bottom: 1px;
+}
+
+.banner-info h5{
+  font-size: 100%;
+  margin-bottom: 0px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 @import url('https://fonts.googleapis.com/css?family=Muli:400,400i,700,700i');
@@ -224,138 +382,4 @@ a.buy-btn{
 
 
 
-
-
-/*
-#93C223
-#545356
-#545356
-*/
-
-
-/*
-===========================================
-    User Nav
-===========================================
-*/
-.nav-user {
-    background-color: #93C223;
-    padding-right: 20%;
-    color: white;
-}
-
-.nav-user a {
-    font-size: 80%;
-    color: inherit;
-    padding: 3px 10px;
-}
-
-.nav-user .nav-item:hover {
-    background-color: white;
-    color: #93C223;
-}
-
-/*
-===========================================
-    Title / Search bar
-===========================================
-*/
-
-
-.title-title {
-	margin-top: 16px;
-}
-
-.title-search {
-    margin-top: 10px;
-}
-
-.title-icon {
-    padding: 4px 0 0 0;
-    text-align: end;
-    color: #93C223;
-}
-
-.title-text h4 {
-    margin-bottom: 0;
-    font-weight: 400;
-}
-
-.title-text p {
-    margin-top: 0;
-    padding-top: 0;
-    font-size: 70%
-}
-
-/*========================================*/
-
-.checkout {
-    font-size: 90%;
-    color: black;
-}
-
-
-/*
-===========================================
-    Nav Categories
-===========================================
-*/
-.nav-categories {
-	background-color: #545356;
-    color: white;
-}
-
-.nav-categories .nav-item {
-    border-top: 4px solid #545356;
-}
-
-.nav-categories .nav-item:hover {
-	border-top: 4px solid #93C223;
-}
-
-.nav-categories a {
-	color: inherit;
-    font-weight: bold;
-    font-size: 90%;
-}
-
-
-/*
-===========================================
-    Main banner
-===========================================
-*/
-.banner img {
-    width: 100%;
-    height: 100%;
-}
-
-.banner .col-sm-12 {
-    padding: 0;
-}
-
-.banner-info {
-    position: absolute;
-    background-color: rgba(0, 0, 0, .3);
-    /*background-color: black;*/
-    color: white;
-    bottom: 0px;
-    text-align: center;
-    padding: 5px 20px;
-}
-
-.banner-info hr{
-    border-color: white;
-    margin: 3px 0;
-}
-
-.banner-info h4{
-	font-size: 140%;
-    margin-bottom: 1px;
-}
-
-.banner-info h5{
-    font-size: 100%;
-    margin-bottom: 0px;
-}
 
